fixed search bar alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -173,6 +173,7 @@ button {
 #search-form {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   column-gap: 0.2em;
   margin: 0 5%;
 }
